--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>SecureSight</title>
     <style>
-      body { font-family: Arial, sans-serif; width: 220px; padding: 12px; }
-      button { width: 100%; padding: 8px; font-size: 14px; }
+      body {
+        font-family: "Segoe UI", Arial, sans-serif;
+        width: 300px;
+        padding: 14px;
+        background: #f9fafc;
+        color: #111;
+      }
+      h3 {
+        margin-top: 0;
+        text-align: center;
+      }
+      button {
+        width: 100%;
+        padding: 8px;
+        font-size: 14px;
+        border: none;
+        background: #1976d2;
+        color: white;
+        border-radius: 6px;
+        cursor: pointer;
+      }
+      button:hover {
+        background: #1565c0;
+      }
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 10px;
+      }
+      td {
+        padding: 5px 4px;
+        font-size: 13px;
+      }
+      td.icon {
+        width: 28px;
+        text-align: center;
+        font-size: 16px;
+      }
+      #domainAgeResult {
+        margin-top: 8px;
+        text-align: center;
+        font-weight: 500;
+      }
+      #scanButton {
+        margin-bottom: 8px;
+      }
+      .small {
+        font-size: 11px;
+        color: #555;
+        text-align: center;
+        margin-top: 6px;
+      }
     </style>
   </head>
   <body>
-    <h4>SecureSight</h4>
+    <h3>🔒 SecureSight</h3>
     <button id="scanButton">Scan site now</button>
+    <table id="resultTable"></table>
+    <div id="domainAgeResult"></div>
+    <div class="small">Results refresh each time you scan.</div>
     <script src="popup.js"></script>
   </body>
 </html>
