Displays Sus scripts, SSL works, Whoisapi key updated

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,7 @@
     </div>
 
     <div id="domainAgeResult">Domain age: Unknown</div>
+    <p id="susScriptResult">Checking for suspicious scripts...</p>
 
     <script src="popup.js"></script>
   </body>
